[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/entities/enemies/farmerEnemy/FarmerEnemy-Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/states/enemy/platformbot/Off.gd" type="Script" id=2]
[ext_resource path="res://src/states/enemy/platformbot/Air.gd" type="Script" id=3]
[ext_resource path="res://src/entities/enemies/platbot/PlatformBot.gd" type="Script" id=4]
[ext_resource path="res://src/states/StatesMachine.gd" type="Script" id=5]
[ext_resource path="res://src/states/enemy/platformbot/Walk.gd" type="Script" id=6]
[ext_resource path="res://src/states/enemy/platformbot/Idle.gd" type="Script" id=7]
[ext_resource path="res://src/states/enemy/farmerBot/MeleeAttack.gd" type="Script" id=8]
[ext_resource path="res://assets/entities/enemies/farmerEnemy/FarmerEnemy-Arm.png" type="Texture" id=9]
[ext_resource path="res://src/entities/enemies/farmerEnemy/ArmController.gd" type="Script" id=10]
[ext_resource path="res://src/entities/enemies/farmerEnemy/ArmFlip.gd" type="Script" id=11]
[ext_resource path="res://src/entities/enemies/farmerEnemy/AttackTrigger.gd" type="Script" id=12]
[ext_resource path="res://assets/entities/enemies/farmerEnemy/FarmerBot-Gun.png" type="Texture" id=13]
[ext_resource path="res://src/states/enemy/farmerBot/Shoot.gd" type="Script" id=14]
[ext_resource path="res://src/states/enemy/farmerBot/Reload.gd" type="Script" id=15]
[ext_resource path="res://src/card/ControlCard.tscn" type="PackedScene" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 22.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.5847

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float angle_degrees;
uniform float strength : hint_range(0,1, 0.0001);

//	Directional Blur Shader

vec4 dirBlur(sampler2D sampler, vec2 uv, vec2 dir) {
	// Change the nu,ber of samples for better quality at the cost of performance
	int samples = 10;
	vec4 l = vec4(0);
	float delta = 1.0 / float(samples);
	for(float i = -1.0; i <= 1.0; i += delta)
    {
        l += texture(sampler, uv - vec2(dir.x * i, dir.y * i)).rgba;
    }
	return vec4(l*delta*0.5);
}


void fragment(){
	vec2 blur_vector = vec2(cos(radians(angle_degrees)),sin(radians(angle_degrees)))*strength;
	COLOR=dirBlur(TEXTURE, UV, blur_vector);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/angle_degrees = 90.0
shader_param/strength = 0.0

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 3 )
shader_param/angle_degrees = null
shader_param/strength = null

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ArmController/ArmFront:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("ArmController/ArmBack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove_motion_blur"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArmController/ArmBack:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ArmController/ArmBack:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("ArmController/ArmFront")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove_motion_blur"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "gunIdle"
tracks/0/type = "value"
tracks/0/path = NodePath("ArmController/ArmFront:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -98.332 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmController/ArmBack:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -128.309 ]
}

[sub_resource type="Animation" id=10]
resource_name = "gunReload"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ArmController/ArmFront:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1, 1.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -98.332, -207.178, -173.062, -207.2, -98.332, -113.286, -113.286, -98.332 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmController/ArmBack:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -128.309, -128.309, -180.0, 180.0, -128.309 ]
}

[sub_resource type="Animation" id=11]
length = 0.04
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ArmController/ArmBack:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -180.0, 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmController/ArmFront:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.04 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 180.0, 0.0, -180.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("ArmController/ArmBack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_motion_blur"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("ArmController/ArmFront")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_motion_blur"
} ]
}

[node name="FarmerEnemy" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 31.9336 ]
}
walk_speed = 100
jump_impulse = 500

[node name="ControlCard" parent="." instance=ExtResource( 16 )]
position = Vector2( 0, -40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="HitCollision" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 15.5, 12 )
shape = SubResource( 2 )

[node name="HitCollision2" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -15.5, 12 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
vframes = 2

[node name="ArmController" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="ArmBack" type="Node2D" parent="ArmController"]
position = Vector2( 15.5, 12 )
rotation = -2.23942
scale = Vector2( -1, 1 )
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="ArmController/ArmBack"]
material = SubResource( 4 )
position = Vector2( 0.972, 8.264 )
texture = ExtResource( 9 )

[node name="ArmFront" type="Node2D" parent="ArmController"]
position = Vector2( -15.5, 12 )
rotation = -1.71622
script = ExtResource( 11 )

[node name="GunSprite" type="Sprite" parent="ArmController/ArmFront"]
position = Vector2( 1.52374, 27.2191 )
rotation = 1.71622
texture = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="ArmController/ArmFront"]
material = SubResource( 5 )
position = Vector2( 0.972273, 8.26431 )
texture = ExtResource( 9 )

[node name="AttackTrigger" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="AttackRay1" type="RayCast2D" parent="AttackTrigger"]
position = Vector2( 0, 12 )
scale = Vector2( 1, -1 )
enabled = true
cast_to = Vector2( -45, 0 )
collision_mask = 6

[node name="AttackRay2" type="RayCast2D" parent="AttackTrigger"]
position = Vector2( 0, 12 )
enabled = true
cast_to = Vector2( 45, 0 )
collision_mask = 6

[node name="StatesMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StatesMachine"]
script = ExtResource( 7 )

[node name="Walk" type="Node" parent="StatesMachine"]
script = ExtResource( 6 )

[node name="Air" type="Node" parent="StatesMachine"]
script = ExtResource( 3 )

[node name="Off" type="Node" parent="StatesMachine"]
script = ExtResource( 2 )

[node name="MeleeAttack" type="Node" parent="StatesMachine"]
script = ExtResource( 8 )

[node name="Shoot" type="Node" parent="StatesMachine"]
script = ExtResource( 14 )

[node name="Reload" type="Node" parent="StatesMachine"]
script = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="ArmAnimation" type="AnimationPlayer" parent="."]
anims/armIdle = SubResource( 8 )
anims/gunIdle = SubResource( 9 )
anims/gunReload = SubResource( 10 )
anims/meleeAttack = SubResource( 11 )

[node name="Label" type="Label" parent="."]
margin_left = -20.2679
margin_top = -49.4449
margin_right = 19.7321
margin_bottom = -35.4449
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="become_controlled" from="." to="." method="_on_Platbot_become_controlled"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
